Prevent text wrapping in icon buttons
Fixes GUIC-88

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -5,6 +5,9 @@ gtx-button {
     > button {
         &.btn {
             transition-property: color, border;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
 
         &.btn:hover {
